Init internationalization library with dinamic json import

--- a/js-modules/index.html
+++ b/js-modules/index.html
@@ -6,6 +6,9 @@
     <title>Javascript Modules</title>
   </head>
   <body>
+    <h1 id="pageTitle"></h1>
+    <h2 id="pageSubtitle"></h2>
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
