Delete internationalization library. Create function with dinamic json import and translate all html page

--- a/js-modules/index.html
+++ b/js-modules/index.html
@@ -6,8 +6,12 @@
     <title>Javascript Modules</title>
   </head>
   <body>
-    <h1 id="pageTitle"></h1>
-    <h2 id="pageSubtitle"></h2>
+    <h1 data-text="title"></h1>
+    <h2 data-text="subtitle"></h2>
+    <p>
+      <span data-text="description"></span>
+      <a data-text="clickHere" href="#"></a>
+    </p>
 
     <script src="main.js" type="module"></script>
   </body>
