Modify dynamic json import

--- a/js-modules/index.html
+++ b/js-modules/index.html
@@ -13,6 +13,6 @@
       <a data-text="clickHere" href="#"></a>
     </p>
 
-    <script src="main.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
