Tris game: add reset button

--- a/tris/index.html
+++ b/tris/index.html
@@ -23,6 +23,8 @@
     <div class="grid-item" data-cell="8"></div>
     <div class="grid-item" data-cell="9"></div>
   </div>
+
+  <button class="reset">RESET</button>
   
   <script type="module" src="./main.js"></script>
 </body>
