Tris game: game completed

--- a/tris/index.html
+++ b/tris/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
   <h1>Tris Game</h1>
+  
   <p class="instructions">
     <img src="./assets/o.svg" /> Starts the game
   </p>
+
+  <p class="winner"></p>
 
   <div class="container">
     <div class="grid-item" data-cell="1"></div>
