--- a/05-forms/contact-module.html
+++ b/05-forms/contact-module.html
@@ -36,7 +36,7 @@
     <br /><br /><hr /><br />
 
 
-    <form name="payment">
+    <form name="payment" id="formPayment">
       <h1>Payment form</h1>
       <p>Required fields are followed by <strong><span aria-label="required">*</span></strong></p>
 
@@ -73,7 +73,7 @@
             <span>Name: </span>
             <strong><span aria-label="required">*</span></strong>
           </label>
-          <input type="text" id="name" name="username" required />  
+          <input type="text" id="username" name="username" required />  
         </p>
         
         <p>
@@ -81,7 +81,7 @@
             <span>Email: </span>
             <strong><span aria-label="required">*</span></strong>
           </label>
-          <input type="email" id="mail" name="user-mail" required />
+          <input type="email" id="usermail" name="user-mail" required />
         </p>
 
         <p>
@@ -128,11 +128,24 @@
             placeholder="MM/YY"
             pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$" />
         </p>
+
+        <p>
+          <label for="document">Upload your document</label>
+          <input type="file" name="document" id="document" accept="image/*" multiple />
+        </p>
+
+        <p>
+          <input type="checkbox" name="privacy" id="privacy" value="true" />
+          <label for="privacy">
+            <span>Privacy policy</span>
+            <strong><span aria-label="required">*</span></strong>
+          </label>
+        </p>
       </section>
 
       <section>
         <p>
-          <button type="submit">Validate the payment</button>
+          <button type="submit" id="paymentFormSubmit">Validate the payment</button>
         </p>
       </section>
     </form>
