--- a/05-forms/contact-module.html
+++ b/05-forms/contact-module.html
@@ -69,19 +69,47 @@
         </fieldset>
 
         <p>
-          <label for="name">
+          <label for="username">
             <span>Name: </span>
             <strong><span aria-label="required">*</span></strong>
           </label>
           <input type="text" id="username" name="username" required />  
         </p>
+
+        <p>
+          <label for="birthday">
+            <span>Date of birth: </span>
+            <strong><span aria-label="required">*</span></strong>
+          </label>
+          <input 
+            type="date"
+            id="birthday"
+            name="userbirthday"
+            min="1905-01-01"
+            required 
+          />  
+        </p>
+
+        <p>
+          <label for="userage">
+            <span>Age: </span>
+          </label>
+          <input type="number" id="userage" name="user-age" min="18" max="120" step="1" />  
+        </p>
         
         <p>
-          <label for="mail">
+          <label for="usermail">
             <span>Email: </span>
             <strong><span aria-label="required">*</span></strong>
           </label>
           <input type="email" id="usermail" name="user-mail" required />
+        </p>
+        
+        <p>
+          <label for="userphone">
+            <span>Phone: </span>
+          </label>
+          <input type="tel" id="userphone" name="user-phone" />
         </p>
 
         <p>
@@ -95,6 +123,24 @@
 
       <section>
         <h2>Payment information</h2>
+
+        <p>
+          <label for="amount">
+            <span>Amount: </span>
+            <strong><span aria-label="required">*</span></strong>
+          </label>
+          <input
+            type="range"
+            name="amount"
+            id="amount"
+            min="100"
+            max="1000"
+            step="50"
+            value="500"
+            required
+          />
+          <output for="amount" id="amountVal"></output>
+        </p>
 
         <p>
           <label for="card">
