--- a/05-forms/contact-module.html
+++ b/05-forms/contact-module.html
@@ -36,7 +36,8 @@
     <br /><br /><hr /><br />
 
 
-    <form name="payment" id="formPayment">
+    <!-- <form name="payment" id="formPayment"> -->
+    <form name="payment" id="formPayment" novalidate>
       <h1>Payment form</h1>
       <p>Required fields are followed by <strong><span aria-label="required">*</span></strong></p>
 
@@ -67,6 +68,17 @@
             </li>
           </ul>
         </fieldset>
+
+        <p>
+          <label for="sex">
+            <span>Sex: </span>
+            <strong><span aria-label="required">*</span></strong>
+          </label>
+          <select id="sex" name="sex">
+            <option value="male" selected>male</option>
+            <option value="female">female</option>
+          </select>
+        </p>
 
         <p>
           <label for="username">
@@ -102,14 +114,15 @@
             <span>Email: </span>
             <strong><span aria-label="required">*</span></strong>
           </label>
-          <input type="email" id="usermail" name="user-mail" required />
+          <input type="email" id="usermail" name="user-mail" minlength="8" required />
+          <span class="error" aria-live="polite"></span>
         </p>
         
         <p>
           <label for="userphone">
             <span>Phone: </span>
           </label>
-          <input type="tel" id="userphone" name="user-phone" />
+          <input type="tel" id="userphone" name="user-phone" pattern="^\+?[1-9]\d{1,14}$" />
         </p>
 
         <p>
